[package]
name = "ipfs-log-rs"
version = "0.1.0"
authors = ["Frans Saukko <frans@equilibrium.co>"]
edition = "2018"

[dependencies]
futures = "0.1.29"
tokio = "0.1.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.10.1"
hyper = "0.12"
ipfs-api = "0.5.1"
sha2 = "0.8.0"
secp256k1 = "0.15.5"
rand = "0.6"
hex = "0.4.0"
