[package]
name = "ipfs-log-rs"
version = "0.1.0"
authors = ["Frans Saukko <frans@equilibrium.co>"]
edition = "2018"

[dependencies]
futures = "0.1.29"
tokio = "0.1.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.10.1"
hyper = "0.12"
sha2 = "0.8.0"
secp256k1 = "0.15.5"
rand = "0.6"
hex = "0.4.0"
ipfs = { path = "/home/mark/Projects/ipfs-rust/rust-ipfs" }
cid = "0.4.0"
multihash = "0.10.1"
libipld = { git = "https://github.com/ipfs-rust/rust-ipld" }

[patch.crates-io]                                                                                                                                                                 
ctr = { git = "https://github.com/koivunej/stream-ciphers.git", branch = "ctr128-64to128" }

# these are needed for the floodsub local originated messages to be seen by subscribers
libp2p = { git = "https://github.com/koivunej/rust-libp2p.git", branch = "v0.16.2-with-floodsub-opts" }
libp2p-core = { git = "https://github.com/koivunej/rust-libp2p.git", branch = "v0.16.2-with-floodsub-opts" }
libp2p-swarm = { git = "https://github.com/koivunej/rust-libp2p.git", branch = "v0.16.2-with-floodsub-opts" }
libp2p-floodsub = { git = "https://github.com/koivunej/rust-libp2p.git", branch = "v0.16.2-with-floodsub-opts" }
