[package]
name = "ipfs-log-rs"
version = "0.1.0"
authors = ["Frans Saukko <frans@equilibrium.co>"]
edition = "2018"

[dependencies]
futures = "0.3"
tokio = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.10.1"
hyper = "0.13"
ipfs-api = "0.7"
sha2 = "0.9.0"
secp256k1 = "0.19"
rand = "0.7"
hex = "0.4.0"
